osso-af-startup (1.35-1) unstable; urgency=low

  * UNRELEASED
  * Ported the memory card buffer flushing fix from maintenance.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 19 Jan 2007 13:31:46 +0200

osso-af-startup (1.34-1) unstable; urgency=low

  * Startup greeting fix from Gabriel Schulhof.
  * Removed top-scripts/startup-greeting.sh.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 16 Jan 2007 16:38:33 +0200

osso-af-startup (1.33-1) unstable; urgency=low

  * Fixed problem with /etc/sudoers when installing to Sardine.
  * Fixed startup problem when alarmd is not available. Fixes: MB#910

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 03 Jan 2007 12:47:15 +0200

osso-af-startup (1.32-1) unstable; urgency=low

  * Added new startup greeting. Fixes: NB#47055
  * Updated osso-af-utils dependency to a newer version.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 01 Dec 2006 16:05:06 +0200

osso-af-startup (1.31-1) unstable; urgency=low

  * Removed clean-tmp-dirs. Fixes: NB#47646
  * Added restarting of alarmd to after-suw-process-restart.sh.
    Fixes: NB#46456
  * Increased the sleep after MAD. Fixes: NB#47918

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 29 Nov 2006 16:19:02 +0200

osso-af-startup (1.30-1) unstable; urgency=low

  * xset770 now disables keyrepeat for the full screen key. Fixes: NB#46298

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 27 Nov 2006 13:21:24 +0200

osso-af-startup (1.29-1) unstable; urgency=low

  * Moved running of hwkbd-reconfig after MAD startup. Fixes: NB#43511

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 19 Oct 2006 13:56:13 +0300

osso-af-startup (1.28-1) unstable; urgency=low

  * Reverted back to old building style because the new didn't work.
    Fixes: NB#41548, NB#42158
  * Fixed invalid e-mail addresses in debian/changelog.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 12 Oct 2006 14:17:07 +0300
