@@ -56,7 +56,7 @@ start)
       source $AF_INIT_DIR/startup-wizard.sh start
       source $AF_INIT_DIR/af-defines.sh ;# re-read locale variables
       # show progress animation
-      /usr/sbin/anim-shower 10000 &
+      /usr/sbin/anim-shower 17000 &
       # restart processes because the locale might have changed
       source $AF_INIT_DIR/after-suw-process-restart.sh
     fi
