@@ -2,8 +2,10 @@ osso-af-startup (1.35-1) unstable; urgency=low
 
   * UNRELEASED
   * Ported the memory card buffer flushing fix from maintenance.
+  * anim-shower now has 17 second delay.
+  * Added restarting of osso_hss to the first boot.
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 19 Jan 2007 13:31:46 +0200
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 02 Feb 2007 11:26:38 +0200
 
 osso-af-startup (1.34-1) unstable; urgency=low
 
